# PSE

./: .gitignore  .gitmodules  Aq_eq_wBq.ipynb  Checks_and_OldCode.ipynb  LICENSE  OrrSommerfeld_and_primitive.ipynb  README.md
OrrSommerfeld_and_primitive/: Checks_and_OldCode.ipynb  OrrSommerfeld_and_primitive.ipynb
PSE/: .gitignore  Doxyfile  Makefile
PSE/Submodules/: CMakeLists.txt
PSE/include/: Ax_b.hpp  Init_Mat.hpp  Init_Vec.hpp  Init_x.hpp  PSE.hpp  Read_q.hpp  base_flow.hpp  calc_Closure.hpp  class.hpp  factorial.hpp  get_D_Coeffs.hpp  print.hpp  set_A_and_B.hpp  set_A_and_B_zi.hpp  set_A_and_b.hpp  set_BCs.hpp  set_D.hpp  set_Euler_Advance.hpp  set_Mat.hpp  set_Vec.hpp  set_b.hpp  trapz.hpp  update_Closure.hpp
PSE/src/: .gitignore  Ax_b.cpp  Ax_b.hpp  Init_Mat.cpp  Init_Vec.cpp  Init_x.cpp  Init_x.hpp  Makefile  PSE.c  PSE.cpp  PSE.h  PSE.hpp  Read_q.cpp  Read_q.hpp  base_flow.cpp  base_flow.hpp  calc_Closure.cpp  class.cpp  factorial.cpp  factorial.hpp  get_D_Coeffs.cpp  get_D_Coeffs.hpp  print.cpp  print.hpp  set_A_and_B.cpp  set_A_and_B_zi.cpp  set_A_and_b.cpp  set_BCs.cpp  set_D.cpp  set_Euler_Advance.cpp  set_Mat.cpp  set_Vec.cpp  set_b.cpp  test_tofile.py  trapz.cpp  update_Closure.cpp
PSE/src/ExampleFiles/: Makefile  Pass2D  Pass2DToFunction.cpp  Pass2DToFunction.exec  ex11  ex11_1.tmp
Schmid_MatLab/: Dmat.m  couet.m  deven.m  energy.m  fmy.m  iord2.m  maxer.m  n9.m  nlize.m  optimal.m  osmat.m  pois.m  qbmat.m  two.m
