cmake_minimum_required(VERSION 3.5)
#include(FindPETSc.cmake)
#project(Dohp)
#set(PETSC_DIR "${Dohp_SOURCE_DIR}/petsc")
#set(PETSC_ARCH "arch-linux2-c-debug")
#set(CC "mpicc")
#set(CXX "mpicxx")
list (APPEND CMAKE_MODULE_PATH "${Dohp_SOURCE_DIR}/cmake-modules")
find_package(PETSc REQUIRED)
message(WARNING "PETSC_FOUND = ${PETSC_FOUND}")
